# AtmosphericScattering

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AtmosphericScattering.sln  AtmosphericScattering.vcxproj  AtmosphericScattering.vcxproj.filters  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  camera.h  main.cpp  mesh.h  model.h  model_loadingtest.cpp  objloader.cpp  objloader.hpp  run.sh
AtmosphericScattering.dir/Debug/: AtmosphericScattering.exe.recipe  AtmosphericScattering.ilk
AtmosphericScattering.dir/Debug/Atmosphe.A2EDF1A6.tlog/: AtmosphericScattering.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AtmosphericScattering.dir/Debug/Atmosphe.F810830C.tlog/: AtmosphericScattering.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AtmosphericScattering.dir/backup/Debug/Atmosphe.A2EDF1A6.tlog/: CL.write.1.tlog
AtmosphericScattering.dir/backup/Debug/Atmosphe.F810830C.tlog/: AtmosphericScattering.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog
main.dSYM/Contents/Resources/DWARF/: main
models/: Earth.mtl  Earth2.mtl  object1.mtl
shaders/: model.fs  model.vs  object.fs  object.vs  postprocessing.fs  postprocessing2.fs
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
